# Story-ai-generator-backend

./: main.py  requirements.txt
story-generator-backend/: readme.md
story-generator-backend/story_creator_flow/: README.md  pyproject.toml
story-generator-backend/story_creator_flow/src/story_creator_flow/: main.py
story-generator-backend/story_creator_flow/src/story_creator_flow/crews/head_crew/: head_crew.py
story-generator-backend/story_creator_flow/src/story_creator_flow/crews/head_crew/config/: agents.yaml
story-generator-backend/story_creator_flow/src/story_creator_flow/crews/story_outline_crew/: story_outline_crew.py
story-generator-backend/story_creator_flow/src/story_creator_flow/crews/story_outline_crew/config/: tasks.yaml
story-generator-frontend/: app.py  readme.md
story-generator/story_creator_flow/: crewai_flow.html
story-generator/story_creator_flow/src/story_creator_flow/: main.py
story-generator/story_creator_flow/src/story_creator_flow/crews/head_crew/: head_crew.py
story-generator/story_creator_flow/src/story_creator_flow/crews/head_crew/config/: tasks.yaml
story-generator/story_creator_flow/src/story_creator_flow/crews/scene_creator_crew/: scene_creator_crew.py
story-generator/story_creator_flow/src/story_creator_flow/crews/scene_creator_crew/config/: agents.yaml  tasks.yaml
story-generator/story_creator_flow/src/story_creator_flow/crews/story_outline_crew/: story_outline_crew.py
story-generator/story_creator_flow/src/story_creator_flow/crews/story_outline_crew/config/: agents.yaml  tasks.yaml
