[project]
name = "story_creator_flow"
version = "0.1.0"
description = "story_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
]

[project.scripts]
kickoff = "story_creator_flow.main:kickoff"
run_crew = "story_creator_flow.main:kickoff"
plot = "story_creator_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
